# see https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=setup.cfg
[metadata]
name = pvx
version = 0.0.1
author = JoJoJotarou
# author_email = author@example.com
description = Python version & venv management
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = Apache-2.0 License
url = https://github.com/JoJoJotarou/pvx
project_urls =
    Bug Tracker = https://github.com/JoJoJotarou/pvx/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click==8.1.2
    pexpect==4.8.0
    rich==12.2.0

[options.entry_points]
console_scripts =
    pvx = pvx.pvx:pvx
